--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                             <ul class="navbar-nav ml-auto ">
                                 <li class="nav-item ">
                                     <a href="#" class="facebook">
-                                        <img src="/images/fb.png" alt="" srcset="">
+                                        <img src="images/fb.png" alt="" srcset="">
                                     </a>
                                 </li>
 
                                 <li class="nav-item ">
                                     <a href="#" class="insta">
-                                        <img src="/images/insta.png" alt="" srcset="">
+                                        <img src="images/insta.png" alt="" srcset="">
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a href="#" class="phone">
-                                        <img src="/images/phone.png" alt="" srcset="">
+                                        <img src="images/phone.png" alt="" srcset="">
                                     </a>
                                     
                                 </li>
@@ -81,7 +81,7 @@
                 </button>   
 
                 <a href="#" class="navbar-brand navBrand">
-                    <img src="/images/logo-ke-belanda-resize.png" class="d-inline-block align-top" alt="logo">
+                    <img src="images/logo-ke-belanda-resize.png" class="d-inline-block align-top" alt="logo">
                 </a>
 
                 <div class="collapse navbar-collapse" id="navb">
@@ -145,7 +145,7 @@
                         <form class="form-inline my-2 my-lg-0 src-section">
                             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                             <button  class="btn btn-outline-success my-2 my-sm-0 btn-search" type="submit">
-                                <img src="/images/btn-search.png" alt="search">
+                                <img src="images/btn-search.png" alt="search">
                             </button>
                         </form>
 
@@ -158,8 +158,8 @@
                                 data-toggle="dropdown">
                                 CART / RP0.00
                                 
-                                <img src="/images/Icon awesome-shopping-bag-1.png" class="before" alt="">
-                                <img src="/images/icon-hover.png" class="after" alt="">
+                                <img src="images/Icon awesome-shopping-bag-1.png" class="before" alt="">
+                                <img src="images/icon-hover.png" class="after" alt="">
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
                               <a class="dropdown-item" href="#">No Products In Charts</a>
@@ -235,7 +235,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK1.png" alt="">
+                                    <img src="images/PRODUK1.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Bali Kintamani Specialty 250Gr</h3>
                                     <p>Rp115,000.00</p>
@@ -245,7 +245,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK2.png" alt="">
+                                    <img src="images/PRODUK2.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Bali Specialty 1Kg</h3>
                                     <p>Rp385,000.00</p>
@@ -255,7 +255,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK3.png" alt="">
+                                    <img src="images/PRODUK3.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Flores Specialty 1Kg</h3>
                                     <p>Rp360,000.00</p>
@@ -265,7 +265,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                             <div class="produk-item ">
                                 <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                <img src="/images/PRODUK4.png" alt="">
+                                <img src="images/PRODUK4.png" alt="">
                                 <P class="quickview-text">QUICKVIEW</P>
                                 <h3>Arabica Gayo Specialty 1Kg</h3>
                                 <p>Rp385,000.00</p>
@@ -275,7 +275,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK5.png" alt="">
+                                    <img src="images/PRODUK5.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Java Specialty 1Kg</h3>
                                     <p>Rp385,000.00</p>
@@ -285,7 +285,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK6.png" alt="">
+                                    <img src="images/PRODUK6.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Malabar Specialty 1Kg</h3>
                                     <p>Rp360,000.00</p>
@@ -296,7 +296,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                             <div class="produk-item ">
                                 <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                <img src="/images/PRODUK7.png" alt="">
+                                <img src="images/PRODUK7.png" alt="">
                                 <P class="quickview-text">QUICKVIEW</P>
                                 <h3>Arabica Malabar Specialty 250Gr</h3>
                                 <p>Rp115,000.00</p>
@@ -306,7 +306,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK8.png" alt="">
+                                    <img src="images/PRODUK8.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Mandheling Specialty 1Kgr</h3>
                                     <p>Rp360,000.00</p>
@@ -316,7 +316,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4">
                                 <div class="produk-item ">
                                     <button class="love-icon"><i class="fa fa-heart"></i></button>
-                                    <img src="/images/PRODUK9.png" alt="">
+                                    <img src="images/PRODUK9.png" alt="">
                                     <P class="quickview-text">QUICKVIEW</P>
                                     <h3>Arabica Toraja Specialty 1Kg</h3>
                                     <p>Rp360,000.00</p>
@@ -502,7 +502,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="/templates/jquery/jquery-3.5.1.min.js"></script>
     <script src="/templates/retina/retina.min.js"></script>
 </body>
 </html>
